@@ -1,4 +1,4 @@
-.\" $Id: tmux.1,v 1.19 2007-11-24 18:05:39 nicm Exp $
+.\" $Id: tmux.1,v 1.20 2007-11-26 20:36:30 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -176,7 +176,12 @@ This is permits a section of a window or its history to be copied to the
 .Em paste buffer
 for later insertion into another window.
 The navigation keys move the cursor around the window, scrolling as necessary.
-The space key begins a selection; the enter key or 
+In addition,
+.Ql ^A
+and
+.Ql ^E
+move to the start and end of the line; the space key begins a selection; and the
+enter key or
 .Ql ^W
 copies the selection to the paste buffer and exits copy mode.
 .Pp
